# BigBean_ChessEngine

./: CMakeLists.txt  README.md
include/: board.h  evaluation.h  gameState.h  movegen.h  search.h  utils.h
src/: board.cpp  board.h  evaluation.cpp  gameState.cpp  main.cpp  movegen.cpp  search.cpp  utils.cpp
tests/: board_test.cpp  evaluation_test.cpp  gameState_test.cpp  minimax_test.cpp  pawn_test.cpp  slidingPiece_test.cpp  specialPiece_test.cpp
